--- a/ckanext/amplus/templates/header.html
+++ b/ckanext/amplus/templates/header.html
@@ -27,7 +27,7 @@
             {% block header_logo %} {{ super() }} {% endblock %}
             <div class="collapse navbar-collapse justify-content-end" id="main-navigation-toggle">
               {% block header_site_navigation %}
-              <ul class="section navigation">
+              <ul class="section navigation mb-0">
                 <ul class="nav nav-pills navbar-nav me-auto mb-2 mb-lg-0">
                   {% block header_site_navigation_tabs %}
                     {{ super() }}
