Added additional templates to render regarding the ckan version

--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -5,7 +5,7 @@
     {% endblock %}
   </div>
 </div>
-<div class="row w-100 pt-4 pb-3 search-bar-custom" style="background-color: #EFECF4; margin: 0;">
+<div class="row w-100 pt-4 pb-3 search-bar-custom search-bar-29" style="background-color: #EFECF4; margin: 0;">
   <div class="col-md-6 mx-auto">
     {% block search %}
       {% snippet 'home/snippets/search.html' %}
