--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -78,7 +78,7 @@
             {% endif %}
         </div>
         
-        <div class="data tab-pane fade flex-column flex-align-center align-items-center" id="locate">
+        <div class="data tab-pane fade flex-column flex-align-center" id="locate">
           <!-- Map Section -->
           {% snippet 'snippets/coming_soon.html' %}
         </div>
