--- a/ckanext/amplus/assets/amplus.css
+++ b/ckanext/amplus/assets/amplus.css
@@ -1321,12 +1321,18 @@ a:active {
   width: auto;
   min-width: 100%;
 }
+.featured-charts-wrap {
+  background-color: rgb(124, 15, 100); 
+  height: 10px;
+  padding: 0;
+  margin: 0; 
+}
 .footer-container {
-  padding: 5rem 0;
+  padding: 10px 0; 
 }
 .site-footer {
   color: #9E9E9E;
-  background: #FFFFFF;
+  background: #070707;
   padding: 6rem 0;
 }
 .site-footer .logo img {
@@ -1355,10 +1361,7 @@ a:active {
   font-weight: 600;
 }
 .footer-links ul {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  padding-left: 0;
-  list-style: none;
+  margin: 0;
 }
 .footer-links ul li {
   padding: 5px 0;
@@ -1367,6 +1370,12 @@ a:active {
   color: #9E9E9E;
   font-size: 16px;
   font-weight: 600;
+}
+.footer-line {
+  width: 100%;
+  height: 5px;
+  background-color: rgb(124, 15, 100);
+  margin-bottom: 20px;
 }
 .homepage .blogs {
   background: #FFFFFF;
