--- a/ckanext/amplus/assets/amplus.css
+++ b/ckanext/amplus/assets/amplus.css
@@ -1322,17 +1322,14 @@ a:active {
   min-width: 100%;
 }
 .featured-charts-wrap {
-  background-color: rgb(124, 15, 100); 
-  height: 10px;
-  padding: 0;
-  margin: 0; 
+  background: #9F1A86;
 }
 .footer-container {
-  padding: 10px 0; 
+  padding-bottom: 5rem;
 }
 .site-footer {
   color: #9E9E9E;
-  background: #070707;
+  background: #000000;
   padding: 6rem 0;
 }
 .site-footer .logo img {
@@ -1347,6 +1344,7 @@ a:active {
   color: #9F1A86;
   font-size: 18px;
   font-weight: 600;
+  padding-top: 5rem;
 }
 .footer-nav {
   margin-top: 1rem;
@@ -1361,7 +1359,10 @@ a:active {
   font-weight: 600;
 }
 .footer-links ul {
-  margin: 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding-left: 0;
+  list-style: none;
 }
 .footer-links ul li {
   padding: 5px 0;
@@ -1370,12 +1371,6 @@ a:active {
   color: #9E9E9E;
   font-size: 16px;
   font-weight: 600;
-}
-.footer-line {
-  width: 100%;
-  height: 5px;
-  background-color: rgb(124, 15, 100);
-  margin-bottom: 20px;
 }
 .homepage .blogs {
   background: #FFFFFF;
