--- a/ckanext/amplus/assets/amplus.css
+++ b/ckanext/amplus/assets/amplus.css
@@ -38,7 +38,7 @@
   --space-padding-small: 0.4rem;
   --space-gap: 1.5rem;
   /* Font sizes */
-  --font-size-large: 20px;
+  --font-size-large: 4rem;
   --font-size-medium: 18px;
   --font-size-hero: 35px;
   --font-size-small: 12px;
@@ -60,6 +60,15 @@
   --transition-speed: 0.3s;
   --max-width-container: 1200px;
   --transition-duration: 0.3s;
+  --space-1: 0.0625rem;  /* 1px = 0.0625rem */
+  --space-5: 0.312; /* 5px = 0.312rem */ 
+  --space-10: 0.625rem;  /* 10px = 0.625rem */
+  --space-20: 1.25rem;   /* 20px = 1.25rem  */
+  --space-30: 1.875rem;  /* 30px = 1.875rem */
+  --space-50: 3.125rem;  /* 50px = 3.125rem */
+  --space-100: 6.25rem;  /* 100px = 6.25rem */
+  --space-200: 12.5rem;  /* 200px = 12.5rem */
+  --space-300: 18.75rem; /* 300px = 18.75rem */
 }
 
 /* Modified CSS using Root Variables */
@@ -76,7 +85,7 @@
   justify-content: var(--flex-justify-center);
   align-content: var(--flex-align-center);
   margin: var(--space-medium) 0;
-  height: 100px;
+  height: var(--space-100);
   width: 100%;
 }
 
@@ -102,7 +111,7 @@
   border-radius: var(--border-radius);
   background-color: var(--color-primary);
   width: 5rem;
-  height: 50px;
+  height: var(--space-50);
   color: var(--color-primary-text);
   display: inline-flex;
   justify-content: var(--flex-justify-center);
@@ -111,7 +120,7 @@
 
 /* Stat Content Text */
 .stat-content .content {
-  height: 50px;
+  height: var(--space-50);
   display: inline-flex;
   flex-direction: column;
   text-align: left;
@@ -121,7 +130,7 @@
 
 /* Stat Number and Title */
 .stat-content .stat-number {
-  font-size: var(--font-size-large);
+  font-size: var(--font-size-medium);
   font-weight: 600;
   color: var(--color-text);
 }
@@ -144,7 +153,7 @@
 .stats-wrapper:before {
   content: "";
   flex: 1 0 25%;
-  height: 1px;
+  height: var(--space-1);
   float: left;
   background-color: var(--color-divider);
 }
@@ -152,7 +161,7 @@
 .stats-wrapper:after {
   content: "";
   flex: 1 0 25%;
-  height: 1px;
+  height: var(--space-1);
   float: right;
   background-color: var(--color-divider);
 }
@@ -161,8 +170,8 @@
 .middle:before,
 .middle:after {
   content: "";
-  width: 1px;
-  height: 50px;
+  width: var(--space-1);
+  height: var(--space-50);
   background-color: var(--color-divider);
 }
 
@@ -227,12 +236,12 @@
 /* Hero Section */
 .hero-content-wrapper {
   background-color: var(--color-light); 
-  width: calc(100% + 20cm);
-  margin-left: -10cm;
-  margin-right: -5cm;
-  margin-top: -1cm;
-  margin-bottom: -1cm;
-  padding: 50px 20px;
+  width: calc(100% + 47.24rem);
+  margin-left: -23.62rem;
+  margin-right: -11.87rem;
+  margin-top: -2.36rem;
+  margin-bottom: -2.36rem;
+  padding: var(--space-50) var(--space-20);
   padding-bottom: 5rem; 
              
 }
@@ -247,9 +256,9 @@
 }
 .hero .hero-img {
   min-width: auto;
-  width: 196px;
-  height: 145px;
-  margin-bottom: 15px;  
+  width: 12.25rem;
+  height: 9.0625rem;
+  margin-bottom: 0.9375rem;  
   display: block;     
   margin-left: auto;
   margin-right: auto; 
@@ -260,7 +269,7 @@
   padding-top: 5rem;
 }
 .hero .page-heading {
-  padding-top: 30px;
+  padding-top: var(--space-30);
   font-size: var(--font-size-hero);
   color: var(--color-secondary);
   margin: 0;
@@ -337,13 +346,13 @@
 
 /* Group Heading */
 .group-topics .group-heading {
-  margin-top: 60px;
+  margin-top: 3.75rem;
 }
 
 /* Empty Data */
 .data > .empty {
   margin: auto;
-  font-size: var(--font-size-large);
+  font-size: var(--font-size-medium);
 }
 
 /* Group Topics Layout */
@@ -351,18 +360,18 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 30px;
+  gap: var(--space-30);
   padding-top: 1rem; 
 }
 
 /* Adjust spacing for group items */
 .group-item {
-  flex: 1 1 200px;
-  max-width: 300px;
-  margin-bottom: 20px;
-  min-height: 300px;
+  flex: 1 1 var(--space-200);
+  max-width: var(--space-300);
+  margin-bottom: var(--space-20);
+  min-height: var(--space-300);
   height: auto; 
-  padding: 5px;
+  padding: var(--space-5);
   display: flex;
   flex-direction: column;
   justify-content: space-between; 
@@ -476,7 +485,7 @@
   -webkit-box-flex: 1;
       -ms-flex: 1 0 33.3%;
           flex: 1 0 33.3%;
-  padding: 20px;
+  padding: var(--space-20);
   margin: 1.5rem;
   background: var(--color-featured-background);
   box-shadow: var(--box-shadow-primary);
@@ -498,7 +507,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 360px;
+  min-height: 22.5rem;
 }
 
 .tab-content > .active {
@@ -516,7 +525,7 @@
   font-size: var(--font-size-hero);
   text-align: center;
   font-weight: 400;
-  padding: var(--space-large) var(--space-medium) var(--space-medium);
+  padding: 5rem;
 }
 
 .group-container {
@@ -529,7 +538,7 @@
 }
 
 .group-container .toggle-section .active {
-  border-bottom: 4px solid var(--color-primary-text);
+  border-bottom: 0.25rem solid var(--color-primary-text);
 }
 
 .group-container .toggle-section .active > a {
@@ -555,7 +564,7 @@
 .group-container .toggle-view {
   font-size: var(--font-size-medium);
   font-weight: 700;
-  letter-spacing: 1.8px;
+  letter-spacing: 0.1rem;
   color: var(--color-divider);
   text-transform: uppercase;
 }
@@ -568,7 +577,7 @@
 }
 
 .group-container .toggle-section .nav-justified li {
-  width: 300px;
+  width: var(--space-300);
   justify-content: center;
   margin-right: var(--space-medium);
   margin-left: var(--space-medium);
@@ -599,18 +608,18 @@
   margin: 1rem 1.5rem;
   background: var(--color-featured-background);
   box-shadow: var(--box-shadow-primary);
-  min-height: 400px;
+  min-height: 25rem;
 }
 
 .dataset-list .dataset-content > div {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 17px;
+  font-size: 0.875rem;
+  font-weight: 25rem;
+  line-height: 1rem;
   color: var(--color-text);
 }
 
 .dataset-list .dataset-content .dataset-heading a {
-  font-size: 21px;
+  font-size: 2var(--space-1);
   font-weight: 600;
   color: var(--color-primary-text);
 }
@@ -697,7 +706,7 @@ a:active {
 }
 
 .item-count {
-  margin: auto 5px;
+  margin: auto var(--space-5);
 }
 
 .no-nav .module {
@@ -734,7 +743,7 @@ a:active {
 
 .module .read-more {
   color: var(--color-secondary);
-  font-size: 13px;
+  font-size: 0,8125rem;
   font-weight: 600;
   text-decoration: underline;
 }
@@ -764,7 +773,7 @@ a:active {
 
 .masthead .nav > li > a,
 .primary .nav > li > a {
-  padding: 6px 12px;
+  padding: 0,375rem 0.75rem;
 }
 
 .nav-item.active > a,
@@ -817,7 +826,7 @@ a:active {
 }
 
 .masthead .logo {
-  max-width: 350px;
+  max-width: 3var(--space-50);
   padding: 2rem 0 1rem 2.5rem;
 }
 
@@ -982,8 +991,8 @@ a:active {
 
 .media-item .media-image {
   float: left;
-  width: 100px;
-  height: 100px;
+  width: var(--space100);
+  height: var(--space100);
   object-fit: var(--color-group-icon-image-fit);
   border-radius: 50%;
   margin-right: 2rem;
@@ -1023,11 +1032,11 @@ a:active {
   flex-direction: column-reverse;
   order: 1;
   margin-right: var(--space-medium);
-  margin-left: 10px;
+  margin-left: var(--space-10);
 }
 
 .resource-list .resource-item .display-name {
-  margin-bottom: 0px;
+  margin-bottom: 0rem;
 }
 
 .resource-list .resource-item .description {
@@ -1037,10 +1046,10 @@ a:active {
 
 .resource-list .resource-item .validation-badge {
   order: 2;
-  margin-left: 10px;
+  margin-left: var(--space-10);
   background: var(--color-text);
   color: var(--color-light);
-  border-radius: 3px;
+  border-radius: 0,1875rem;
   font-size: var(--font-size-small);
   line-height: 1.2;
 }
@@ -1200,8 +1209,8 @@ a:active {
 
 /* Page List Item */
 .page-list-item .image {
-  width: 168px;
-  height: 136px;
+  width: 10.5rem;
+  height: 8.5rem;
   background-position: center center;
   background-size: cover;
 }
@@ -1215,7 +1224,7 @@ a:active {
 .blogs {
   text-align: center;
   background: var(--color-light);
-  padding: 60px 0;
+  padding: 3.75rem 0;
 }
 
 .blogs .row {
@@ -1224,19 +1233,19 @@ a:active {
 }
 
 .blogs .box {
-  margin: 30px 0;
+  margin: var(--space-30) 0;
   text-align: left;
   height: 100%;
 }
 
 .blogs .item-image {
   width: 100%;
-  height: 180px;
+  height: 11,25rem;
   object-fit: cover;
 }
 
 .blogs .item-body {
-  padding: 10px 15px;
+  padding: var(--space-10) 1var(--space-5);
 }
 
 .blogs .media-view {
@@ -1248,12 +1257,12 @@ a:active {
 }
 
 /* Media Queries */
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 61.875rem) {
   .homepage .blogs {
     background-color: var(--color-light);
   }
   .blogs .item-image {
-    height: 200px;
+    height: var(--space-200);
   }
 }
 /* Facet and Filter Styles */
@@ -1298,7 +1307,7 @@ a:active {
   color: var(--color-primary-text);
   font-weight: var(--font-weight-semibold);
   padding-left: var(--space-left);
-  margin-bottom: 30px;
+  margin-bottom: var(--space-30);
   margin-top: 0;
 }
 
@@ -1313,7 +1322,7 @@ a:active {
 .primary .search-form .control-order-by:before {
   content: "";
   position: absolute;
-  right: 16px;
+  right: 1rem;
   border-style: solid;
   background: var(--color-light);
   border-color: transparent var(--color-text);
@@ -1323,18 +1332,18 @@ a:active {
 
 .primary .search-form .control-order-by:after {
   top: 60%;
-  margin-top: -4px;
-  border-width: 4px 0 4px 4px;
+  margin-top: -0.25rem;
+  border-width: 0.25rem 0 0.25rem 0.25rem;
 }
 
 .primary .search-form .control-order-by:before {
   top: 40%;
-  margin-top: -4px;
-  border-width: 4px 4px 4px 0;
+  margin-top: -0.25rem;
+  border-width: 0.25rem 0.25rem 0.25rem 0;
 }
 
 .primary .search-form .control-order-by select {
-  height: 46px;
+  height: 2.875rem;
   box-shadow: var(--box-shadow-light);
   padding-right: 4rem;
   appearance: none;
@@ -1369,18 +1378,18 @@ a:active {
 }
 
 .site-footer .logo img {
-  max-height: 30px;
+  max-height: var(--space-30);
 }
 
 .text-description {
-  font-size: 15px;
+  font-size: 1var(--space-5);
   font-weight: 500;
-  margin-top: 25px;
+  margin-top: 2var(--space-5);
 }
 
 .footer-nav-title {
   color: var(--color-primary-text);
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 600;
 }
 
@@ -1390,12 +1399,12 @@ a:active {
 }
 
 .footer-nav li {
-  padding: 5px 0;
+  padding: var(--space-5) 0;
 }
 
 .footer-nav li a {
   color: var(--color-divider);
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -1407,12 +1416,12 @@ a:active {
 }
 
 .footer-links ul li {
-  padding: 5px 0;
+  padding: var(--space-5) 0;
 }
 
 .footer-links ul li a {
   color: var(--color-divider);
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -1422,20 +1431,20 @@ a:active {
 }
 
 .homepage .blogs .h2 {
-  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: 400;
   margin-bottom: 4.5rem;
 }
 
 .homepage .blogs .box {
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
-  margin: 1.5rem 0px;
+  box-shadow: 0 0 var(--space-30) 0 rgba(0, 0, 0, 0.1);
+  margin: 1.5rem 0rem;
   border: none;
   transition: var(--transition-duration);
 }
 
 .homepage .blogs .box:hover {
-  box-shadow: 0 0 30px 0 rgba(96, 51, 167, 0.3);
+  box-shadow: 0 0 var(--space-30) 0 rgba(96, 51, 167, 0.3);
 }
 
 .homepage .blogs .box:hover a {
@@ -1444,35 +1453,35 @@ a:active {
 
 .homepage .blogs .btn-view-all {
   margin: 4.5rem auto auto;
-  padding: 15px 70px;
-  font-size: 16px;
+  padding: 1var(--space-5) 4.375rem;
+  font-size: 1rem;
   font-weight: 700;
-  box-shadow: 0 10px 10px 0 rgba(65, 65, 65, 0.3);
+  box-shadow: 0 var(--space-10) 0 rgba(65, 65, 65, 0.3);
 }
 
 .homepage .blogs .title {
   color: var(--color-text);
-  font-size: 20px;
+  font-size: var(--space-20);
   font-weight: 600;
-  padding: 10px 20px;
+  padding: var(--space-10) var(--space-20);
   margin: 0;
 }
 
 .homepage .blogs .description {
   color: var(--color-divider);
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
-  padding: 0px 20px 20px 20px;
+  padding: 0rem var(--space-20) var(--space-20) var(--space-20);
   margin: 0;
 }
 
 /* Media Queries */
-@media (min-width: 1200px) {
+@media (min-width: var(--space-200)) {
   body [role=main] .secondary {
     padding: 3rem;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: var(--space-200)) {
   .stats-wrapper:before,
   .stats-wrapper:after,
   .middle:before,
@@ -1500,21 +1509,17 @@ a:active {
   }
   .masthead .navigation .nav-pills.nav > li a {
     padding: 2.2rem 0.8rem;
-    font-size: 15px;
+    font-size: 1var(--space-5);
   }
   .masthead .navigation .nav-pills.nav > li a img {
-    max-width: 18px;
-    max-height: 18px;
+    max-width: 1.125rem;
+    max-height: 1.125rem;
   }
   .masthead .logo {
-    max-width: 250px;
+    max-width: 2var(--space-50);
   }
   .control-order-by {
     padding-right: 0;
-  }
-  .search-bar-custom {
-    background-color: var(--color-background);
-    margin: 0;
   }
   .search-input-group {
     margin-bottom: 2rem;
@@ -1539,32 +1544,32 @@ a:active {
     width: calc(100% - 2rem);
   }
 }
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 61.875rem) {
   .footer-links div {
-    padding: 20px 0px;
+    padding: var(--space-20) 0rem;
   }
   .homepage .group-container {
-    padding: 100px 10px;
+    padding: var(--space100) var(--space-10);
   }
   .homepage .insights {
-    padding: 100px 50px;
+    padding: var(--space100) var(--space-50);
   }
   .navbar-toggle {
-    margin-right: 15px;
+    margin-right: 1var(--space-5);
   }
   .featured-item {
     flex: 1 1 100%;
   }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 48rem) {
   .footer-links div {
-    padding: 20px 0px;
+    padding: var(--space-20) 0rem;
   }
   .masthead .navigation .nav-pills.nav > li a {
     padding: 2.2rem 2.5rem;
   }
   .homepage .group-topics {
-    padding: 100px 10px;
+    padding: var(--space100) var(--space-10);
   }
   .stats {
     height: auto;
@@ -1575,7 +1580,7 @@ a:active {
     height: auto;
   }
   .stats .stats-wrapper .stat-content {
-    width: 300px;
+    width: var(--space-300);
     padding: 3rem 0;
   }
   .stats .stats-wrapper .stat-content a {
