Fix primary button

--- a/ckanext/amplus/assets/amplus.css
+++ b/ckanext/amplus/assets/amplus.css
@@ -1073,7 +1073,6 @@ a:active {
   color: var(--color-featured-background);
   background-color: var(--color-secondary);
   border-radius: 0;
-  margin-top: -1rem;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -1596,4 +1595,8 @@ a:active {
   width: 37.5rem;
   border: 0.125rem solid var(--color-divider);
   overflow: hidden;
+  position: relative;
+}
+.tab-pane {
+  display: block; 
 }
